--- a/index.html
+++ b/index.html
@@ -3,19 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@700&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
   <title>Document</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Beware of the Blob</a>
-  </nav>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand  mb-0 h1" href="#">Beware of the Blob</a>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" id="game-description-link" href="#game-description">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="ost-link" href="#ost">Original Soundtrack</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="dev-team-link" href="#dev-team">Dev Team</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   <section id="video-section">
     <iframe 
       width="560" 
       height="315" 
-      src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+      src="https://www.youtube.com/embed/ndXZKSKdgtg" 
       frameborder="0" 
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
@@ -24,44 +42,57 @@
   <section id="game-description">
     <h1 class="text-center">Beware of the Blob</h1>
     <div class="container">
-      <div class="row">
-        <div class="image col-md">
-          <p><img src="tissue.webp"></p>
+      <div class="row align-items-center">
+        <div class="image col-md-5">
+          <p class="text-md-right"><img src="tissue.webp"></p>
         </div>
 
-        <div class="col-md">
-          <p>Hug</p>
-        </div>
-      </div>
+        <div class="col-md-1"></div>
 
-      <div class="row">
-        <div class="image col-md order-md-2">
-          <p><img src="tissue.webp"></p>
-        </div>
-
-        <div class="col-md order-md-1">
-          <p>Using your Body parts</p>
+        <div class="col-md-5">
+          <p>Give a hug, share the love!</p>
         </div>
       </div>
 
-      <div class="row">
-        <div class="image col-md">
+      <div class="row align-items-center">
+        <div class="image col-md-5 order-md-3">
           <p><img src="tissue.webp"></p>
         </div>
 
-        <div class="image col-md">
-          <p>Sneaky Blob</p>
+        <div class="col-md-1 order-md-2"></div>
+
+        <div class="col-md-5 order-md-1">
+          <p class="text-md-right">Use Your brain to overcome obstacles! Literally!</p>
+        </div>
+      </div>
+
+      <div class="row align-items-center">
+        <div class="image col-md-5">
+          <p class="text-md-right"><img src="tissue.webp"></p>
+        </div>
+
+        <div class="col-md-1"></div>
+
+        <div class="image col-md-5">
+          <p>Explore the mystery of Black Hawk Industries!</p>
         </div>
       </div>
     </div>
   </section>
   
-  <section id="audio-crew">
+  <section id="ost">
     <div class="container">
       <img src="guitar.svg" id="guitar">
       <div class="row">
         <div class="col">
-          <h2>Audio Crew</h2>
+          <h2>Original Soundtrack</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 offset-md-4">
+          <a href="https://store.steampowered.com/app/1304020/Research_Notes_Beware_of_the_Blob_Soundtrack/">
+            <img src="Album5.png" alt="Album Cover" target="_blank" class="img-fluid">
+          </a>
         </div>
       </div>
     </div>
@@ -86,13 +117,16 @@
       
       <div class="row dev-team-row">
         <div class="col-md text-center">
-          <img class="dev-team-portrait" src="team/nancy.bmp" alt="">
+          <img class="dev-team-portrait" src="team/zac-square.jpg" alt="Zac">
         </div>        
         <div class="col-md text-center">
-          <img class="dev-team-portrait" src="team/zac.jpg" alt="">
+          <img class="dev-team-portrait" src="team/ernes.png" alt="Ernes">
+        </div>
+        <div class="col-md text-center">
+          <img class="dev-team-portrait" src="team/nancy.bmp" alt="Nancy">
         </div>        
         <div class="col-md text-center">
-          <img class="dev-team-portrait" src="team/nancy.bmp" alt="">
+          <img class="dev-team-portrait" src="team/terry.jpg" alt="Terry">
         </div>
       </div>
     </div>
@@ -100,17 +134,44 @@
   </section>
 
   <footer>
-    <h3>Contact us</h3>
     <div class="container">
       <div class="row">
-        <div class="col-md-3">
-          <a href="mailto:bewareoftheblob@gmail.com">bewareoftheblob@gmail.com</a>
+        <div class="col">
+          <h2>Contact us</h2>
         </div>
-        <div class="col-md-9">
-          <a href="https://twitter.com/BewareBlob?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @BewareBlob</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
+      </div>
+      <div class="row">
+        
+          <div class="col-md-3">
+            <a href="mailto:bewareoftheblob@gmail.com">bewareoftheblob@gmail.com</a>
+          </div>
+          <div class="col-md-9">
+            <a href="https://twitter.com/BewareBlob?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @BewareBlob</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          </div>
+      </div>
       </div>
     </div>
   </footer>
 </body>
+<script>
+  document.getElementById('game-description-link').addEventListener('click', function(e) {
+    e.preventDefault();
+    var el = document.getElementById('game-description');
+    el.scrollIntoView({top: 0, behavior: 'smooth'});
+  });
+
+  document.getElementById('ost-link').addEventListener('click', function(e) {
+    e.preventDefault();
+
+    var el = document.getElementById('ost');
+    el.scrollIntoView({top: 0, behavior: 'smooth'});
+  });
+
+  document.getElementById('dev-team-link').addEventListener('click', function(e) {
+    e.preventDefault();
+
+    var el = document.getElementById('dev-team');
+    el.scrollIntoView({top: 0, behavior: 'smooth'});
+  });
+</script>
 </html>
