--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand  mb-0 h1" href="#">Beware of the Blob</a>
+        <a class="navbar-brand  mb-0 h1" href="#"><img id="title-image" src="title-tilted.png"></a>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
@@ -31,8 +31,8 @@
     </nav>
   <section id="video-section">
     <iframe 
-      width="560" 
-      height="315" 
+      width="700" 
+      height="400" 
       src="https://www.youtube.com/embed/ndXZKSKdgtg" 
       frameborder="0" 
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
@@ -40,11 +40,10 @@
   </section>
 
   <section id="game-description">
-    <h1 class="text-center">Beware of the Blob</h1>
     <div class="container">
       <div class="row align-items-center">
         <div class="image col-md-5">
-          <p class="text-md-right"><img src="tissue.webp"></p>
+          <p class="text-md-right text-sm-center"><img src="promo/hug.png"></p>
         </div>
 
         <div class="col-md-1"></div>
@@ -56,19 +55,19 @@
 
       <div class="row align-items-center">
         <div class="image col-md-5 order-md-3">
-          <p><img src="tissue.webp"></p>
+          <p class="text-sm-center"><img src="promo/brain.png"></p>
         </div>
 
         <div class="col-md-1 order-md-2"></div>
 
         <div class="col-md-5 order-md-1">
-          <p class="text-md-right">Use Your brain to overcome obstacles! Literally!</p>
+          <p class="text-md-right">Use your Brain to overcome obstacles! Literally!</p>
         </div>
       </div>
 
       <div class="row align-items-center">
         <div class="image col-md-5">
-          <p class="text-md-right"><img src="tissue.webp"></p>
+          <p class="text-md-right text-sm-center"><img src="promo/blackhawk.png"></p>
         </div>
 
         <div class="col-md-1"></div>
@@ -77,7 +76,13 @@
           <p>Explore the mystery of Black Hawk Industries!</p>
         </div>
       </div>
+      <div class="row" style="margin-top: 30px;">
+        <div class="col text-center">
+          <iframe id="steam" src="https://store.steampowered.com/widget/1303790/" frameborder="0" ></iframe>
+        </div>
+      </div>
     </div>
+
   </section>
   
   <section id="ost">
@@ -89,10 +94,27 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 offset-md-4">
+        <div class="col-md-4 offset-md-2">
           <a href="https://store.steampowered.com/app/1304020/Research_Notes_Beware_of_the_Blob_Soundtrack/">
             <img src="Album5.png" alt="Album Cover" target="_blank" class="img-fluid">
           </a>
+        </div>
+
+        <div class="col-md-4">
+          <h3>Created by:</h3>
+
+          <ul class="list-group">
+            <li class="list-group-item">
+              <p>Stephan Vankov</p>
+            </li>
+            <li class="list-group-item">
+              <p>Colin Ketcham</p>
+            </li>
+            <li class="list-group-item">
+              <p>Simon Lace</p>
+            </li>
+          </ul>
+
         </div>
       </div>
     </div>
@@ -117,16 +139,32 @@
       
       <div class="row dev-team-row">
         <div class="col-md text-center">
-          <img class="dev-team-portrait" src="team/zac-square.jpg" alt="Zac">
-        </div>        
-        <div class="col-md text-center">
-          <img class="dev-team-portrait" src="team/ernes.png" alt="Ernes">
+          <a href="https://www.linkedin.com/in/ernes-railey/">
+            <img class="dev-team-portrait" src="team/ernes.png" alt="Ernes">
+          </a>
+          <h4>Ernes Railey</h4>
+          <h5>Creative Director</h5>
         </div>
         <div class="col-md text-center">
-          <img class="dev-team-portrait" src="team/nancy.bmp" alt="Nancy">
+          <a href="https://www.linkedin.com/in/zacemerzian/">
+            <img class="dev-team-portrait" src="team/zac-square.jpg" alt="Zac">
+          </a>
+          <h4>Zac Emerzian</h4>
+          <h5>Level Designer</h5>
         </div>        
         <div class="col-md text-center">
-          <img class="dev-team-portrait" src="team/terry.jpg" alt="Terry">
+          <a href="https://www.linkedin.com/in/hsi-nancy-lin-b967b9171/">
+            <img class="dev-team-portrait" src="team/nancy.bmp" alt="Nancy">
+          </a>
+          <h4>Nancy Lin</h4>
+          <h5>Art Director</h5>
+        </div>        
+        <div class="col-md text-center">
+          <a href="https://www.linkedin.com/in/terry-beyak-093576b/">
+            <img class="dev-team-portrait" src="team/terry.jpg" alt="Terry">
+          </a>
+          <h4>Terry Beyak</h4>
+          <h5>Game Programmer</h5>
         </div>
       </div>
     </div>
