--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Beware of the Blob</title>
+  <link rel="icon" href="atomic-blob-32.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@700&display=swap" rel="stylesheet"> 
@@ -95,7 +97,7 @@
       </div>
       <div class="row">
         <div class="col-md-4 offset-md-2">
-          <a href="https://store.steampowered.com/app/1304020/Research_Notes_Beware_of_the_Blob_Soundtrack/">
+          <a href="https://store.steampowered.com/app/1304020/Research_Notes_Beware_of_the_Blob_Soundtrack/" target="_blank">
             <img src="Album5.png" alt="Album Cover" target="_blank" class="img-fluid">
           </a>
         </div>
@@ -139,28 +141,28 @@
       
       <div class="row dev-team-row">
         <div class="col-md text-center">
-          <a href="https://www.linkedin.com/in/ernes-railey/">
+          <a href="https://www.linkedin.com/in/ernes-railey/" target="_blank">
             <img class="dev-team-portrait" src="team/ernes.png" alt="Ernes">
           </a>
           <h4>Ernes Railey</h4>
           <h5>Creative Director</h5>
         </div>
         <div class="col-md text-center">
-          <a href="https://www.linkedin.com/in/zacemerzian/">
+          <a href="https://www.linkedin.com/in/zacemerzian/" target="_blank">
             <img class="dev-team-portrait" src="team/zac-square.jpg" alt="Zac">
           </a>
           <h4>Zac Emerzian</h4>
           <h5>Level Designer</h5>
         </div>        
         <div class="col-md text-center">
-          <a href="https://www.linkedin.com/in/hsi-nancy-lin-b967b9171/">
+          <a href="https://www.linkedin.com/in/hsi-nancy-lin-b967b9171/" target="_blank">
             <img class="dev-team-portrait" src="team/nancy.bmp" alt="Nancy">
           </a>
           <h4>Nancy Lin</h4>
           <h5>Art Director</h5>
         </div>        
         <div class="col-md text-center">
-          <a href="https://www.linkedin.com/in/terry-beyak-093576b/">
+          <a href="https://www.linkedin.com/in/terry-beyak-093576b/" target="_blank">
             <img class="dev-team-portrait" src="team/terry.jpg" alt="Terry">
           </a>
           <h4>Terry Beyak</h4>
