updates from Nancy

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
-        <a class="navbar-brand  mb-0 h1" href="#"><img id="title-image" src="title-tilted.png"></a>
+        <a class="navbar-brand  mb-0 h1" href="#">Beware of the Blob</a>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
@@ -43,6 +43,11 @@
 
   <section id="game-description">
     <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-6">
+          <img id="title-image" src="title-tilted.png">
+        </div>
+      </div>
       <div class="row align-items-center">
         <div class="image col-md-5">
           <p class="text-md-right text-sm-center"><img src="promo/hug.png"></p>
@@ -78,6 +83,12 @@
           <p>Explore the mystery of Black Hawk Industries!</p>
         </div>
       </div>
+
+      <div class="row" id="steam-row">
+        <div class="col text-center">
+          <h3>Get it now on Steam!</h3>
+        </div>
+      </div>
       <div class="row" style="margin-top: 30px;">
         <div class="col text-center">
           <iframe id="steam" src="https://store.steampowered.com/widget/1303790/" frameborder="0" ></iframe>
@@ -96,13 +107,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 offset-md-2">
+        <div class="col-md-4 offset-md-1">
           <a href="https://store.steampowered.com/app/1304020/Research_Notes_Beware_of_the_Blob_Soundtrack/" target="_blank">
             <img src="Album5.png" alt="Album Cover" target="_blank" class="img-fluid">
           </a>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 offset-md-2">
           <h3>Created by:</h3>
 
           <ul class="list-group">
@@ -124,7 +135,7 @@
 
   <section id="dev-team">
     <div class="container">
-      <img src="spokes.svg" id="spokes">
+      <img src="dev-team-icon.png" id="dev-team-icon">
       <div class="row">
         <div class="col">
           <h2>Dev Team</h2>
@@ -177,7 +188,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <h2>Contact us</h2>
+          <h3>Contact us</h3>
         </div>
       </div>
       <div class="row">
