--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
-        <a class="navbar-brand  mb-0 h1" href="#">Beware of the Blob</a>
+        <a class="navbar-brand  mb-0 h1" href="#">
+          <img src="atomic-blob.png" id="nav-icon">
+          Beware of the Blob
+        </a>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
