fix layout of audio team

--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
   
   <section id="ost">
     <div class="container">
-      <img src="guitar.svg" id="guitar">
       <div class="row">
         <div class="col">
           <h2>Original Soundtrack</h2>
@@ -112,12 +111,12 @@
       <div class="row">
         <div class="col-md-4 offset-md-1">
           <a href="https://store.steampowered.com/app/1304020/Research_Notes_Beware_of_the_Blob_Soundtrack/" target="_blank">
-            <img src="Album5.png" alt="Album Cover" target="_blank" class="img-fluid">
+            <img src="musicicon.png" alt="Album Cover" target="_blank" class="img-fluid">
           </a>
         </div>
 
         <div class="col-md-4 offset-md-2">
-          <h3>Created by:</h3>
+          <h4 id="created-by-header">Created by:</h4>
 
           <ul class="list-group">
             <li class="list-group-item">
