move title into video section

--- a/index.html
+++ b/index.html
@@ -42,15 +42,19 @@
       frameborder="0" 
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
+  
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-6">
+        <img id="title-image" src="title-tilted.png">
+      </div>
+    </div>
+  </div>
   </section>
 
   <section id="game-description">
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-6">
-          <img id="title-image" src="title-tilted.png">
-        </div>
-      </div>
+
       <div class="row align-items-center">
         <div class="image col-md-5">
           <p class="text-md-right text-sm-center"><img src="promo/hug.png"></p>
