--- a/index.html
+++ b/index.html
@@ -177,7 +177,14 @@
           </a>
           <h4>Nancy Lin</h4>
           <h5>Art Director</h5>
-        </div>        
+        </div>    
+        <div class="col-md text-center">
+          <a href="https://www.linkedin.com/in/yehe-lin-628120177/" target="_blank">
+            <img class="dev-team-portrait" src="team/ye-he.jpg" alt="Ye-He">
+          </a>
+          <h4>Ye-He Lin</h4>
+          <h5>Technical Director</h5>
+        </div>    
         <div class="col-md text-center">
           <a href="https://www.linkedin.com/in/terry-beyak-093576b/" target="_blank">
             <img class="dev-team-portrait" src="team/terry.jpg" alt="Terry">
